# MyAnimeDatabaseProject

./: .gitignore  .replit  GIT_SETUP.md  LOCAL_SETUP.md  README.md  anime_db.sqlite  app.py  database.py  jikan_ingestion.py  ml_features.py  models.py  neural_network.py  neural_network_demo.py  pyproject.toml  recommendation_nn.py  replit.md  requirements.txt.local
.streamlit/: config.toml
