[project]
name = "myanimelist-database"
version = "0.1.0"
description = "MyAnimeList Database with Jikan API and Hugging Face ML Integration"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.51.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "huggingface-hub>=0.20.0",
    "python-dotenv>=1.0.0",
]
